created nav bar.

--- a/main.html
+++ b/main.html
@@ -28,6 +28,22 @@
      <!-- Title -->
     <title>My Portfolio</title>
 </head>
+
+<!-- Body -->
 <body>
+    <!-- nav bar -->
+    <nav class="navbar>
+    <div class="max-width">
+        <div class="logo"><a href="home">Determina<span>tion.</span></a></div>
+        <ul class="menubar">
+            <li><a href="home" id="homeID" class="menu-btn">Home</a></li>
+            <li><a href="about" id="aboutID" class="menu-btn">About</a></li>
+            <li><a href="skills" class="menu-btn">Skills</a></li>
+            <li><a href="mysite" class="menu-btn">My Site</a></li>
+            <li><a href="contact" class="menu-btn">Contact</a></li>
+        </ul>
+        <div class="menu-btn">
+            <i class="fas fa-bars"></i>
+        </div>
 </body>
 </html>
