created left section and added profile image that will be used for left column of about section.

--- a/main.html
+++ b/main.html
@@ -45,5 +45,23 @@
         <div class="menu-btn">
             <i class="fas fa-bars"></i>
         </div>
+    </div>
+    </nav>
+
+    <!-- Home section -->
+     <section class="home" id="home">
+        <div class="max-width">
+            <h2 class="title about">About</h2>
+            <div class="about-content">
+                <div class="left coloumn">
+                    <img src="./images/profile_image.jpg" alt="profile">
+                </div>
+                <div class="right coloumn">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
