cretaed my site section with links to my website such as linkedin, github and portfolio website

--- a/main.html
+++ b/main.html
@@ -108,5 +108,49 @@
             </div>
         </div>
     </section>
+    <!-- my-site Section -->
+    <section class="my-site" id="my-site">
+        <div class="max-width">
+            <h2 class="title">My Site</h2>
+            <div class="my-site-content">
+                <div class="left column">
+                    <a href="https://www.linkedin.com/in/taehoon-ray-kim/" target="_blank">
+                    <div class="site">
+                        <div class="site-images">
+                            <img src="./images/linkedin.png" alt="">
+                        <div class="site-text">LinkedIn</div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore 
+                                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+                    </div>
+                    </a>
+                </div>
+                <div class="center column">
+                    <a href="https://github.com/Taehoon-Ray-Kim/my_portfolio" target="_blank">
+                        <div class="site">
+                            <div class="site-images">
+                                <img src="./images/github.png" alt="">
+                                <div class="site-text">GitHub</div>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore 
+                                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="right column">
+                    <a href="#">
+                        <div class="site">
+                            <div class="site-images">
+                                <img src="./images/web.png" alt="">
+                                <div class="site-text">Portfolio Site</div>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore 
+                                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
